--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -64,8 +64,7 @@ ja:
         フォロワー数が10,000人未満の場合、通常は1分以内に分析が完了します。
       support_html: |
         もしいつまで待っても分析が完了しない場合は、<a href="https://twitter.com/egotter_cs" target="_blank">@egotter_cs</a> までご連絡ください。
-  dashboards:
-    show:
+  dashboard:
     form:
       search_category:
         title: '検索カテゴリ'
