--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,6 +60,7 @@ en:
   waiting:
     index:
       text: 'Analyzing data for @%{user}. I’ll be with you in a moment.'
+      reload: 'Reload this page'
       description_html: |
         If you have less than 10,000 followers, %{app} will usually complete the analysis of your data within a minute.
       support_html: |
@@ -91,7 +92,7 @@ en:
       search_label:
         title: 'Search label'
         tooltip: 'You can specify concrete label for searching.'
-        placeholder: 'Choose label'
+        placeholder: 'Choose {value}'
         submit: 'Search'
       show_details:
         title: 'Show profile details'
