--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -70,21 +70,11 @@ ja:
       search_category:
         title: '検索カテゴリ'
         tooltip: 'フォローとフォロワーのどちらを検索するか指定することができます。'
-        friends:
-          label: 'フォロー'
-          help_html: '<strong>フォロー</strong> が選択されています。'
-        followers:
-          label: 'フォロワー'
-          help_html: '<strong>フォロワー</strong> が選択されています。'
-        one_sided_friends:
-          label: '片思いフォロー'
-          help_html: '<strong>片思いフォロー</strong> が選択されています。'
-        one_sided_followers:
-          label: '片思いフォロワー'
-          help_html: '<strong>片思いフォロワー</strong> が選択されています。'
-        mutual_friends:
-          label: '相互フォロー'
-          help_html: '<strong>相互フォロー</strong> が選択されています。'
+        friends: 'フォロー'
+        followers: 'フォロワー'
+        one_sided_friends: '片思いフォロー'
+        one_sided_followers: '片思いフォロワー'
+        mutual_friends: '相互フォロー'
       search_type:
         title: '検索タイプ'
         tooltip: 'ユーザーのプロフィールの要素のうち、職種、場所、URL、キーワードのどれを使って検索するのかを指定します。'
@@ -94,10 +84,6 @@ ja:
         keyword: 'キーワード'
         notice_profile_changes: '変化を通知'
         track_by_keywords: 'キーワードで検索'
-        job_help_html: '<strong>職種</strong> が選択されています。'
-        location_help_html: '<strong>場所</strong> が選択されています。'
-        url_help_html: '<strong>URL</strong> が選択されています。'
-        keyword_help_html: '<strong>キーワード</strong> が選択されています。'
       search_label:
         title: '検索するラベル'
         tooltip: '検索する具体的なラベルを指定することができます。'
