Save listed_count and favourites_count

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -167,6 +167,8 @@ en:
       statuses: 'Statuses'
       following: 'Following'
       followers: 'Followers'
+      lists: 'Lists'
+      likes: 'Likes'
       categories:
         follower: 'Follower'
         one_sided_friend: 'One-sided following'
