--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -167,6 +167,8 @@ ja:
       statuses: 'ツイート'
       following: 'フォロー'
       followers: 'フォロワー'
+      lists: 'リスト'
+      likes: 'いいね'
       categories:
         follower: 'フォロワー'
         one_sided_friend: '片思いフォロー'
