--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -120,6 +120,8 @@ ja:
       statuses: 'ツイート'
       following: 'フォロー'
       followers: 'フォロワー'
+      lists: 'リスト'
+      likes: 'いいね'
     faq_modal:
       title: 'FAQ'
       body_html: |
