--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -92,6 +92,7 @@ ja:
         placeholder_location: '例：東京'
         placeholder_url: '例：TikTok'
         placeholder_keyword: '例：お仕事募集中'
+        quick_select: 'クイックセレクト：'
         submit: '検索する'
       show_details:
         title: 'プロフィール詳細を表示する'
