Set loop_limit to #friend_ids and #follower_ids

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -69,7 +69,11 @@ en:
     form:
       search_user:
         title: 'Target user'
-        tooltip: 'You can specify which user to search for.'
+        tooltip: 'You can specify which user to search for only if you have already purchased a higher level plan.'
+        free_help: 'You can specify which user to search for only if you have already purchased a higher level plan.'
+        limit_reached_help_html: |
+          The number of @<span class="user"></span>'s following and followers exceeds the limit(%{count}).
+          If you would like to search for more users, please contact <a href="https://twitter.com/egotter_cs" target="_blank">@egotter_cs</a>.
         placeholder: '@username'
         quick_select: 'Quick select: '
       search_category:
