Add icons to dropdown menu

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -198,8 +198,9 @@ ja:
       inactive_1week: '1週間ツイートなし'
       inactive_1month: '1ヶ月間ツイートなし'
       inactive_3months: '3ヶ月間ツイートなし'
+      details: '詳細を開く'
       egotter: 'えごったーで見る'
       twitter: 'ツイッターで見る'
       direct_message: 'DMを送る'
-      error_report: '間違いを報告'
-      bug_report: 'バグを報告'
+      fix: '間違いを直す'
+      bug: 'バグを報告する'
