--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -198,8 +198,9 @@ en:
       inactive_1week: 'No tweets for a week'
       inactive_1month: 'No tweets for a month'
       inactive_3months: 'No tweets for 3 months'
+      details: 'Open details'
       egotter: 'See on egotter'
       twitter: 'See on Twitter'
       direct_message: 'Send DM'
-      error_report: 'Error report'
-      bug_report: 'Bug report'
+      fix: 'Fix data'
+      bug: 'Report bug'
