--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -109,9 +109,9 @@ ja:
       search_response:
         html: |
           @<span class="user"></span> の
-          <span class="badge badge-primary category"></span>
+          <a class="badge badge-primary category" href="#search-category-anchor"></a>
           の中から
-          <span class="badge badge-primary type"></span> が <span class="badge badge-primary label"></span>
+          <a class="badge badge-primary type" href="#search-type-anchor"></a> が <a class="badge badge-primary label" href="#search-label-anchor"></a>
           のユーザーを検索する
       js:
         specify_correct_label: '検索するラベルを選択してください。'
