--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -103,9 +103,9 @@ en:
         placeholder_keyword: 'e.g. Accepting requests for work'
         quick_select: 'Quick select: '
         submit: 'Search'
-      show_details:
-        title: 'Show profile details'
-        tooltip: 'If checked, add profile details to the search results.'
+      reduced_display:
+        title: 'Reduced display'
+        tooltip: 'If checked, hide profile details of the search results.'
       search_response:
         html: |
           Search for users whose
