--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -114,6 +114,7 @@ ja:
           <a class="badge badge-primary type" href="#search-type-anchor"></a> が <a class="badge badge-primary label" href="#search-label-anchor"></a>
           のユーザーを検索する
       js:
+        loading: '読み込み中'
         specify_correct_label: '検索するラベルを選択してください。'
         no_results_found_html:
           検索結果が見つかりませんでした。<br>
