Refactor JS in profile section

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -199,7 +199,8 @@ en:
       inactive_1week: 'No tweets for a week'
       inactive_1month: 'No tweets for a month'
       inactive_3months: 'No tweets for 3 months'
-      details: 'Open details'
+      expand: 'Expand details'
+      compress: 'Compress details'
       egotter: 'See on egotter'
       twitter: 'See on Twitter'
       reply: 'Post a reply'
