--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -199,7 +199,8 @@ ja:
       inactive_1week: '1週間ツイートなし'
       inactive_1month: '1ヶ月間ツイートなし'
       inactive_3months: '3ヶ月間ツイートなし'
-      details: '詳細を開く'
+      expand: '詳細を開く'
+      compress: '詳細を閉じる'
       egotter: 'えごったーで見る'
       twitter: 'ツイッターで見る'
       reply: 'リプライする'
