--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -105,6 +105,10 @@ ja:
         placeholder_keyword: '例：お仕事募集中'
         quick_select: 'クイックセレクト：'
         submit: '検索する'
+      filter:
+        button: '絞り込み'
+      sort:
+        button: '並び替え'
       reduced_display:
         title: 'コンパクト表示'
         tooltip: 'チェックすると、検索結果を小さく表示します。'
