--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -133,6 +133,8 @@ en:
       success: 'Successfully authenticated from Twitter account.'
       failure: 'Could not authenticate you from Twitter because %{reason}.'
   api:
+    base:
+      data_not_completed: '%{app} is currently in the process of analyzing the data. If you have less than 10,000 followers, %{app} will usually complete the analysis of your data within a minute.'
     subscriptions:
       destroy: 'You have successfully cancelled a subscription.'
   shared:
